    - fixed a bug with parsing function arguments inside {if} tags if a comma
      was present. (Andrei)
    - updated debug console with config file vars. (Monte)
    - numerous documentation updates. (Monte) 
    - added SMARTY_DIR constant which indicating location of Smarty files.
      (Monte)
    - added popup_init and popup functions. (Monte)
    - updated debug console with config file vars. (Monte)
    - added debugging url control. (Monte)
    - added 'quotes' type to escape modifier. (Monte, Mike Krus)
    - added 'total' and 'iteration' section properties. (Andrei)
    - added 'start', 'max', and 'step' section attributes/properties. (Andrei)
    - fixed a bug with security checking of functions inside {if} tags.
      (Andrei)
    - fixed a bug in Config_File that would incorrectly booleanize values that
      weren't really booleans. (Andrei)

Version 1.4.3
-------------
    - added regex_replace modifier, documented. (Monte)
    - added debugging console feature and custom function assign_debug_info,
      documented. (Monte)
    - added 'scope' attribute for {config_load}, 'global' is now deprecated but
      is still supported. (Andrei)
    - reduced template symbol table pollution by moving config array into the
      class itself. (Andrei)
    - fixed a bug with passing quoted arguments to modifiers inside {if}
      statements. (Andrei, Sam Beckwith)
    - added security features for third party template editing, documented
      (Monte)
    - added assign custom function, documented. (Monte)
    - fixed bug with template header using version instead of _version. (Monte)
    - fixed a problem with putting $ followed by numbers inside {strip} and
      {/strip} tags. (Andrei)
    - fixed Config_File class to allow empty config paths (defaults to current
      directory). (Andrei)

Version 1.4.2
-------------
    - move $version to internal variable, remove from docs. (Monte)